
option java_outer_classname="UnRegisterBulkKeyNotifCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message UnRegisterBulkKeyNotifCommand 
{
	optional sint32 removeCallbackId = 1;
	optional sint32 updateCallbackId = 2;
	repeated string keys = 3;
	optional int64 requestId = 4;
}